fix: removed inner spin button appearance on firefox

--- a/onlineshop/src/components/FilterSlider/FilterSlider.css
+++ b/onlineshop/src/components/FilterSlider/FilterSlider.css
@@ -27,5 +27,10 @@
 }
 
 .input::-webkit-inner-spin-button {
+  appearance: none;
   -webkit-appearance: none;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
